--- a/WhenCanIDrink/CalculationPage.xaml
+++ b/WhenCanIDrink/CalculationPage.xaml
@@ -22,12 +22,16 @@
 
         <!--TitlePanel contains the name of the application and page title-->
         <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">
-            <TextBlock x:Name="ApplicationTitle" Text="MY APPLICATION" Style="{StaticResource PhoneTextNormalStyle}"/>
-            <TextBlock x:Name="PageTitle" Text="page name" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
+            <TextBlock x:Name="ApplicationTitle" Text="WHEN CAN I DRINK?" Style="{StaticResource PhoneTextNormalStyle}"/>
+            <TextBlock x:Name="CalculationPage" Text="page name" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
         </StackPanel>
 
         <!--ContentPanel - place additional content here-->
-        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0"></Grid>
+        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
+            <Button Content="When Can I Drive?" Height="134" HorizontalAlignment="Left" Margin="66,365,0,0" Name="button1" VerticalAlignment="Top" Width="332" Click="button1_Click" />
+            <TextBox Height="80" HorizontalAlignment="Left" Margin="66,231,0,0" Name="textBox1" Text="TextBox" VerticalAlignment="Top" Width="332" />
+            <ListBox Height="100" HorizontalAlignment="Left" Margin="66,72,0,0" Name="listBox1" VerticalAlignment="Top" Width="332" />
+        </Grid>
     </Grid>
  
     <!--Sample code showing usage of ApplicationBar-->
